--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
               src="./assets/svg/ham-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
+              type = "button"
             />
             <img
               src="./assets/svg/ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
+              type = "button"
             />
           </div>
         </div>
