--- a/index.html
+++ b/index.html
@@ -343,6 +343,6 @@
       </div>
     </footer>
 
-    <script src="./index.js"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
